[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Providence Salumu <Providence.Salumu@smunix.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
Pillow = "^9.0.1"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.931"
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
python-lsp-server = "^1.3.3"
python-lsp-black = "^1.1.0"
pylsp-mypy = "^0.5.7"
pyls-flake8 = "^0.4.0"
pyls-isort = "^0.2.2"
twine = "^3.8.0"
zipp = "^3.7.0"

[tool.poetry.scripts]
poetry-demo = "poetry_demo:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
